Prevented body from jumping back and forth due to scrollbar changes

--- a/app/bundles/CoreBundle/Assets/css/app.less
+++ b/app/bundles/CoreBundle/Assets/css/app.less
@@ -166,3 +166,10 @@ label.required:after {
   color: #eee;
   z-index: 9999;
 }
+
+body.noscroll
+{
+  position: fixed;
+  overflow-y: scroll;
+  width: 100%;
+}
